# library

./: .pre-commit-config.yaml  Dockerfile.nextjs-simple  Taskfile.yaml  ThemeSwitcher.module.css  babel.test.config copy.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_1.txt
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0003_remove_book_genres_alter_book_publisher.py  (+2 more)
back/: Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt
back/api/: admin.py  consumers.py  filtters.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
back/api/management/commands/: load_author_profiles.py  load_genres.py  load_sample_data.py
back/api/migrations/: 0001_initial.py  0002_author_publisher_remove_book_author_and_more.py  0006_authorngram_authortrigram.py  0007_book_book_image_book_description_book_publish_year.py  0008_alter_book_book_image.py  0009_genre_book_genres.py
back/api/services/: search.py
back/api/utils/: trigrams.py
back/backend/: asgi.py  consumers.py  routing.py  settings.py  urls.py
back/users/: admin.py  models.py  serializers.py  urls.py  views.py
back/users/migrations/: 0001_initial.py  0002_userbookstatus.py
backend/: settings.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  babel.config.js  babel.test.config.js  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
library-app/: Chart.yaml  manifest.yaml  secrets.yaml  values.yaml
(+153 files in other folders)
