[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
django = ">=5.2.4,<6.0.0"
django-cors-headers = "4.7.0"
djangorestframework = "3.16.0"
djangorestframework-simplejwt = "^5.3.0"
mysqlclient = "2.2.7"
sqlparse = "0.5.3"
asgiref = "3.9.1"
tzdata = "2025.2"
poetry = ">=2.1.3,<3.0.0"
django-filter = "25.1"
channels = "^4.0.0"
channels-redis = "^4.1.0"
daphne = "^4.0.0"
pillow = "^11.3.0"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
